--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,26 @@ header {
     margin-bottom: 20px;
 }
 
-
+.blink {
+    font-size: 24px;
+    font-weight: bold;
+    color: #ff5733;
+    text-align: center;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    animation: blinker 1s ease-in-out infinite;
+    background: linear-gradient(45deg, #ffcc00, #ff5733, #ff00ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: inline-block;
+    padding: 0px;
+    border-radius: 5px;
+  }
+/*
+  @keyframes blinker {
+    0%, 100% { opacity: 1; transform: scale(1); }
+    50% { opacity: 0; transform: scale(1.1); }
+  }
+*/
 .decorative-heading {
     font-family: 'Georgia', serif; /* Use a decorative font */
     font-size: 2rem; /* Large font size */
