--- a/styles.css
+++ b/styles.css
@@ -29,16 +29,21 @@ body::before {
 }
 /* Header Styles */
 header {
-    width: 100%; /* Ensure the header spans the full width */
     box-sizing: border-box; /* Ensure padding is included in the width */
-    text-align: center;
     padding: 20px;
-    background-color: rgba(244, 244, 244, 0.9); /* Light background with slight opacity */
     border-bottom: 2px solid #ccc;
     margin-bottom: 20px;
+    position: fixed; /* Fixed position to stay at the bottom */
+    top: 0; /* Align to the bottom of the viewport */
+    left: 0; /* Align to the left */
+    width: 100%; /* Full width */
+    text-align: center; /* Center-align the text */
+    background-color:  rgba(244, 244, 244, 0.9); /* Light background with slight opacity */
+    z-index: 100; /* Ensure it stays above other content */
 }
 
 .blink {
+    margin-top: 100px;
     font-size: 24px;
     font-weight: bold;
     color: #ff5733;
@@ -76,21 +81,41 @@ header {
     text-align: right;
     margin: 20px;
 }
+.toggle-button {
+    position: fixed;
+    top: 5px;
+    right: 5px;
+    padding: 10px 10px;
+    background-color: #FFBF00;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    z-index: 1000; /* Ensure the button is above other content */
+}
+
+.toggle-button:hover {
+    background-color: #FFAA33;
+}
 
 /* About Us Button */
 .about-button {
-    background-color: #007bff;
-    color: #fff;
+    position: fixed;
+    top: 55px;
+    right: 5px;
+    padding: 10px 15px;
+    background-color: #FFBF00;
+    color: white;
     border: none;
-    padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 1rem;
-    margin-left: 10px;
+    font-size: 16px;
+    z-index: 1000; /* Ensure the button is above other content */
 }
 
 .about-button:hover {
-    background-color: #2980b9;
+    background-color: #FFAA33;
 }
 
 /* Ensure About Us popup is hidden by default */
@@ -182,23 +207,7 @@ header {
 }
 
 
-.toggle-button {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    z-index: 1000; /* Ensure the button is above other content */
-}
 
-.toggle-button:hover {
-    background-color: #0056b3;
-}
 
 .tree, .tree ul {
     list-style-type: none;
